# GoalBERT

./: .gitignore  README.md  a.out  base.json  changed.json  conda_env.yml  eval.py  eval_rr.py  gen_mask_figure.py  index.py  pyproject.toml  query_colbert.py  test.c  train.py  vary_entropy.sh  vary_masks.sh  visualize_emb_shift.py
ColBERT/colbert/: searcher.py
ColBERT/colbert/indexing/: collection_encoder.py  collection_indexer.py
ColBERT/colbert/infra/: launcher.py
ColBERT/colbert/infra/config/: settings.py
ColBERT/colbert/modeling/: checkpoint.py  colbert.py
ColBERT/colbert/modeling/tokenization/: doc_tokenization.py  query_tokenization.py
ColBERT/colbert/search/: candidate_generation.py  index_storage.py
ColBERT/utility/utils/: dpr.py
eval/: metrics.py  test_metrics.py
goalbert/: config.py  test_config.py
goalbert/eval/: metrics.py  test_metrics.py
goalbert/training/: checkpoint.py  env.py  goalbert.py  ppo.py  rollout_buffer.py
