[tool.poetry]
name = "goalbert"
version = "0.1.0"
description = "GoalBERT: Goal-Directed ColBERT for Iterative Retrieval"
authors = ["Ben Giacalone <bensgiacalone@gmail.com>"]
readme = "README.md"
packages = [{include = "goalbert"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
tqdm-stubs = "^0.2.1"
tqdm = "^4.66.2"
gymnasium = "^0.29.1"
wandb = "^0.16.4"
safetensors = "^0.4.2"
colbert-ai = {path = "ColBERT", develop = true}
transformers = "4.38.0"
tokenizers = "^0.15.2"

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
black = "24.2.0"
pytest = "8.0.1"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"

[tool.black]
exclude = "ColBERT"

[tool.mypy]
exclude = "ColBERT"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
